@@ -223,7 +223,7 @@ update_archive (void)
 	if (subcommand_option == CAT_SUBCOMMAND)
 	  append_file (file_name);
 	else
-	  dump_file (0, file_name, file_name);
+	  dump_member (file_name);
       }
   }
 
